# RL-connect4

./: muzero_wrapper.py
src/: wrapped_connect4.py
src/agents/baselines/: DQNAgent.py  MuZeroAgent.py  random_agent.py
src/alphazero/: Game_bitboard.py  ResNet.py  play_against_human.py  pre_compute_elo_ratings.py
src/eval/: competition.py  run_episode.py
src/muzero/: README.md  diagnose_model.py  models.py  muzero.py  pyproject.toml  replay_buffer.py  self_play.py  spike.py  trainer.py
src/muzero/games/: animal_shogi.py  connect4.py  connect4_new.py  make2048.py  tictactoe.py  x2blocks.py
src/muzero/good_results/animal_shogi-2021-01-24--19-21-10/: README.md
src/muzero/good_results/connect4-2021-01-18--07-07-21/: README.md
src/muzero/good_results/tictactoe-2021-01-18--01-16-32/: README.md  model.checkpoint  params.txt
src/muzero/results/connect4_new/2025-06-01--00-24-02/: events.out.tfevents.1748708651.DESKTOP-E7Q4AII.26764.0
src/muzero/scripts/: sync_to_ml.sh
