[tool.poetry]
name = "muzero-general"
version = "0.1.0"
description = ""
authors = ["Ken Morishita <mokemokechicken@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"
torch = "^1.7.1"
tensorboard = "^2.4.0"
gym = "^0.18.0"
box2d-py = "^2.3.8"
ray = "^1.1.0"
seaborn = "^0.11.1"
nevergrad = "^0.4.2"
aiohttp = "^3.7.3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
